client/style.css
/***********************

ENTIRE SITE

***********************/

body, html {
  width: 100%;
  height: 100%;
  font-size: 16px;
  color: #555;
}

body {
  background: radial-gradient(ellipse, rgba(255,255,255,0.5), rgba(255,255,255,0.9)), url('../assets/vegetables-for-food-wide.jpg');
  background-size: cover;
  background-position: 80% 90%;
}

.container {
  margin-top: 50px;
  margin-bottom: -55px;
  /*background: radial-gradient(ellipse, rgba(255,255,255, .7), rgba(255,255,255, 0.4));*/
  padding: 5% 0;
  position: absolute;
  top:0%;
  width: 100%;
  height: 100%;
  border-radius: 5px;
}

/***********************

FOOTER

***********************/
.container:after {
  content: "";
  display: block;
  height: 75px;
}

.container2 {
  margin: 0 auto;
  padding: 0 24px;
  width: 100%;
  border-radius: 5px;
}

.footer {
  background-color: rgba(58,58,60,0.8);
  height: 55px;
  width: 100%;
  position:fixed;
  bottom: 0%;
  text-align: center;
}

.footer__heading {
  margin-bottom: 12px;
  color: #fff;
  font-weight: 400;
}

.footer__heading a {
  color: #23B5AF;
}

.footer__copyright {
  color: #B2CCCC;
}

/***********************

HEADER

***********************/

.header-main {
  background-color: rgba(58,58,60,0.8);
  height: 50px;
  width: 100%;
  position: fixed;
  top: 0%;
  text-align: center;
  z-index: 1;
}

.header-main__inner {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.header-main__logo {
  width: 50px;
}

.header-main__logo img {
  display: block;
  margin: 0;
  width: 100%;
  height: auto;
}

.header-main__user {
  position: relative;
}

.header-main__user-details {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}

.header-main__user-avatar {
  margin-left: 10px;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  box-shadow: inset 0 0 0 2px #fff;
}

.header-main__user-avatar img {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.header-main__user-name {
  margin: 0;
  color: white;
  font-weight: 300;
}

.header-main__user-dropdown {
  visibility: hidden;
  list-style: none;
  position: absolute;
  top: 100%;
  right: 0;
  z-index: -1;
  margin: 0;
  padding: 12px;
  width: 240px;
  background-color: #fff;
  box-shadow: -4px 4px 24px rgba(0, 0, 0, 0.4);
  opacity: 0;
  -webkit-transition: opacity 0.3s;
          transition: opacity 0.3s;
}

.header-main__user-dropdown::before {
  display: block;
  position: absolute;
  top: -6px;
  right: 12px;
  width: 12px;
  height: 6px;
  border-bottom: solid 6px #fff;
  border-left: solid 6px transparent;
  border-right: solid 6px transparent;
  content: "";
}

.header-main__user-dropdown-item {
  padding: 4px 0;
}

.header-main__user-dropdown-sep {
  border-bottom: solid 1px #BDD4DE;
}

.header-main__user-dropdown-item a {
  display: block;
  padding: 4px 8px;
  color: #3F5765;
}

.header-main__user-dropdown-item a:hover {
  color: #fff;
  background-color: red;
}

/* hover state */
.header-main__user:hover .header-main__user-dropdown {
  visibility: visible;
  z-index: 100;
  opacity: 1;
}

/**
 * Some modifiers for right side opponent
 */
.header-main__user-details--right {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.header-main__user-details--right > .header-main__user-avatar {
  margin: 0 0 0 24px;
}

/***********************

FORMS

***********************/

.orange {
   color: #ec971f;
}

.green {
   color: #5cd65c;
}

.star, .usd{
   font-size: 23px;
}

.spacing {
  margin-top: 20px;
}

.popup {
  color: #888;
  margin-left: 10px;
  position: absolute;
}

.help-block {
   text-align: center;
}

/***********************

MAIN

***********************/

.card {
  position: relative;
  background: #ffc;
  margin: 10px 0;
  padding: 10px;
  border-radius: 5px;
  color: #888;
}

.card img {
  margin: 10px 25%;
  max-width: 50%;
}

.card .stars {
  text-align: center;
}
.remove{
  position: absolute;
  top: 5px;
  right: 5px;
  color: #f66;
}
/***********************

MAP

***********************/

.map-google {
  position: relative;
  height: 300px;
  width: 300px;
  margin-top: 20px;
  border: 7px solid rgb(127, 0, 0);
  border: 7px solid rgba(255, 255, 255, .8);
  -webkit-background-clip: padding-box; /* for Safari */
  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
  height: 300px;
  width: 300px;
}

.mapbutton {
  margin-top: 20px;
}

.mapgreeting {
  margin-top: 50px;
  opacity: 0.8;
  text-align: center;
  border-radius: 0px;
  color: orange;
  background-color: white;
  border-radius: 5px;
}

.mapdiv {
  padding: 5% 0;
  margin: 0 auto;
  width:300px;
  height:auto;
  margin-bottom: 75px;
}

.gm-style-iw {
  text-align: center;
}

/***********************

DISPLAY

***********************/

.center div{
  margin: 0 auto;
  text-align: center;
  background: rgba(255,255,255,0.25);
  height: 200px;
}

.center div p {
  font-size: 14px;
  white-space: nowrap;
  overflow: hidden;
  margin: 0;

}

.center span div {
  font-size:16px;
  height: 20px;
}

.center div img{
  margin: 0 auto;
  height: 50%;
  max-width: 100%;
}

.category {
  color: #c33;
}

.display-missing {
  background: rgba(255,255,255,0.5);
  height: 30px;
  text-align: center;
}

.display-error {
  background: rgba(255,100,100,0.5);
  text-align: center;
  font-size: 15px;
  color: #eee;
  margin-top: 10px;
  display: none;
  width: 100%;
}

.restaurant-name {
  font-size: 12px;
  color: #777;
}

.highlighted {
  border: 3px solid orange;
}

.display.container {
  top: 0;
  padding: 20px 0;
}

.display.container h4 {
  text-align: center;
  font-weight: bold;
}

/***********************

Login

***********************/

.fb-logo {
  max-width: 20%;
}


.fb-button {
  font-size: 16px;
}

